# TyporaNote

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Test/: CMakeLists.txt  test1.cpp
TyporaNote/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  main.cpp
